--- a/enter.html
+++ b/enter.html
@@ -184,7 +184,7 @@
         function checkKey(event) {
             event.preventDefault();
             var key = document.getElementById('key').value;
-            if (key === '...') { // Change 'mysecretkey' to your desired key
+            if (key === '143cChelseDBest') { // Change 'mysecretkey' to your desired key
                 sessionStorage.setItem('access_granted', 'true');
                 window.location.href = 'index.html';
             } else {
@@ -211,4 +211,5 @@
         </form>
     </div>
 </body>
+
 </html>
